dist.x86_64-pc-linux-gnu/etc/python/grass/lib/gis.py


# include/grass/defs/gis.h: 333
if _libs["grass_gis.8.5"].has("G_find_file2_misc", "cdecl"):
    G_find_file2_misc = _libs["grass_gis.8.5"].get("G_find_file2_misc", "cdecl")
    G_find_file2_misc.argtypes = [String, String, String, String]
    G_find_file2_misc.restype = c_char_p

# include/grass/defs/gis.h: 337
if _libs["grass_gis.8.5"].has("G_find_etc", "cdecl"):
    G_find_etc = _libs["grass_gis.8.5"].get("G_find_etc", "cdecl")
    G_find_etc.argtypes = [String]
    if sizeof(c_int) == sizeof(c_void_p):
        G_find_etc.restype = ReturnString
    else:
        G_find_etc.restype = String
        G_find_etc.errcheck = ReturnString

# include/grass/defs/gis.h: 340
if _libs["grass_gis.8.5"].has("G_find_raster", "cdecl"):
    G_find_raster = _libs["grass_gis.8.5"].get("G_find_raster", "cdecl")
    G_find_raster.argtypes = [String, String]
    G_find_raster.restype = c_char_p

# include/grass/defs/gis.h: 341
if _libs["grass_gis.8.5"].has("G_find_raster2", "cdecl"):
    G_find_raster2 = _libs["grass_gis.8.5"].get("G_find_raster2", "cdecl")
    G_find_raster2.argtypes = [String, String]
    G_find_raster2.restype = c_char_p

# include/grass/defs/gis.h: 344
if _libs["grass_gis.8.5"].has("G_find_raster3d", "cdecl"):
    G_find_raster3d = _libs["grass_gis.8.5"].get("G_find_raster3d", "cdecl")
    G_find_raster3d.argtypes = [String, String]
    G_find_raster3d.restype = c_char_p

# include/grass/defs/gis.h: 347
if _libs["grass_gis.8.5"].has("G_find_vector", "cdecl"):
    G_find_vector = _libs["grass_gis.8.5"].get("G_find_vector", "cdecl")
    G_find_vector.argtypes = [String, String]
    G_find_vector.restype = c_char_p

# include/grass/defs/gis.h: 348
if _libs["grass_gis.8.5"].has("G_find_vector2", "cdecl"):
    G_find_vector2 = _libs["grass_gis.8.5"].get("G_find_vector2", "cdecl")
    G_find_vector2.argtypes = [String, String]
    G_find_vector2.restype = c_char_p

# include/grass/defs/gis.h: 351
if _libs["grass_gis.8.5"].has("G_begin_geodesic_equation", "cdecl"):
    G_begin_geodesic_equation = _libs["grass_gis.8.5"].get(
        "G_begin_geodesic_equation", "cdecl"
    )
    G_begin_geodesic_equation.argtypes = [c_double, c_double, c_double, c_double]
    G_begin_geodesic_equation.restype = c_int

# include/grass/defs/gis.h: 352
if _libs["grass_gis.8.5"].has("G_geodesic_lat_from_lon", "cdecl"):
    G_geodesic_lat_from_lon = _libs["grass_gis.8.5"].get(
        "G_geodesic_lat_from_lon", "cdecl"
    )
    G_geodesic_lat_from_lon.argtypes = [c_double]
    G_geodesic_lat_from_lon.restype = c_double

# include/grass/defs/gis.h: 355
if _libs["grass_gis.8.5"].has("G_begin_geodesic_distance", "cdecl"):
    G_begin_geodesic_distance = _libs["grass_gis.8.5"].get(
        "G_begin_geodesic_distance", "cdecl"
    )
    G_begin_geodesic_distance.argtypes = [c_double, c_double]
    G_begin_geodesic_distance.restype = None

# include/grass/defs/gis.h: 356
if _libs["grass_gis.8.5"].has("G_set_geodesic_distance_lat1", "cdecl"):
    G_set_geodesic_distance_lat1 = _libs["grass_gis.8.5"].get(
        "G_set_geodesic_distance_lat1", "cdecl"
    )
    G_set_geodesic_distance_lat1.argtypes = [c_double]
    G_set_geodesic_distance_lat1.restype = None

# include/grass/defs/gis.h: 357
if _libs["grass_gis.8.5"].has("G_set_geodesic_distance_lat2", "cdecl"):
    G_set_geodesic_distance_lat2 = _libs["grass_gis.8.5"].get(
        "G_set_geodesic_distance_lat2", "cdecl"
    )
    G_set_geodesic_distance_lat2.argtypes = [c_double]
    G_set_geodesic_distance_lat2.restype = None

# include/grass/defs/gis.h: 358
if _libs["grass_gis.8.5"].has("G_geodesic_distance_lon_to_lon", "cdecl"):
    G_geodesic_distance_lon_to_lon = _libs["grass_gis.8.5"].get(
        "G_geodesic_distance_lon_to_lon", "cdecl"
    )
    G_geodesic_distance_lon_to_lon.argtypes = [c_double, c_double]
    G_geodesic_distance_lon_to_lon.restype = c_double

# include/grass/defs/gis.h: 359
if _libs["grass_gis.8.5"].has("G_geodesic_distance", "cdecl"):
    G_geodesic_distance = _libs["grass_gis.8.5"].get("G_geodesic_distance", "cdecl")
    G_geodesic_distance.argtypes = [c_double, c_double, c_double, c_double]
    G_geodesic_distance.restype = c_double

# include/grass/defs/gis.h: 362
if _libs["grass_gis.8.5"].has("G_get_ellipsoid_parameters", "cdecl"):
    G_get_ellipsoid_parameters = _libs["grass_gis.8.5"].get(
        "G_get_ellipsoid_parameters", "cdecl"
    )
    G_get_ellipsoid_parameters.argtypes = [POINTER(c_double), POINTER(c_double)]
    G_get_ellipsoid_parameters.restype = c_int

# include/grass/defs/gis.h: 363
if _libs["grass_gis.8.5"].has("G_get_spheroid_by_name", "cdecl"):
    G_get_spheroid_by_name = _libs["grass_gis.8.5"].get(
        "G_get_spheroid_by_name", "cdecl"
    )
    G_get_spheroid_by_name.argtypes = [
        String,
        POINTER(c_double),
        POINTER(c_double),
        POINTER(c_double),
    ]
    G_get_spheroid_by_name.restype = c_int

# include/grass/defs/gis.h: 364
if _libs["grass_gis.8.5"].has("G_get_ellipsoid_by_name", "cdecl"):
    G_get_ellipsoid_by_name = _libs["grass_gis.8.5"].get(
        "G_get_ellipsoid_by_name", "cdecl"
    )
    G_get_ellipsoid_by_name.argtypes = [String, POINTER(c_double), POINTER(c_double)]
    G_get_ellipsoid_by_name.restype = c_int

# include/grass/defs/gis.h: 365
if _libs["grass_gis.8.5"].has("G_ellipsoid_name", "cdecl"):
    G_ellipsoid_name = _libs["grass_gis.8.5"].get("G_ellipsoid_name", "cdecl")
    G_ellipsoid_name.argtypes = [c_int]
    G_ellipsoid_name.restype = c_char_p

# include/grass/defs/gis.h: 366
if _libs["grass_gis.8.5"].has("G_ellipsoid_description", "cdecl"):
    G_ellipsoid_description = _libs["grass_gis.8.5"].get(
        "G_ellipsoid_description", "cdecl"
    )
    G_ellipsoid_description.argtypes = [c_int]
    G_ellipsoid_description.restype = c_char_p

# include/grass/defs/gis.h: 367
if _libs["grass_gis.8.5"].has("G_read_ellipsoid_table", "cdecl"):
    G_read_ellipsoid_table = _libs["grass_gis.8.5"].get(
        "G_read_ellipsoid_table", "cdecl"
    )
    G_read_ellipsoid_table.argtypes = [c_int]
    G_read_ellipsoid_table.restype = c_int

# include/grass/defs/gis.h: 370
if _libs["grass_gis.8.5"].has("G_get_projunits", "cdecl"):
    G_get_projunits = _libs["grass_gis.8.5"].get("G_get_projunits", "cdecl")
    G_get_projunits.argtypes = []
    G_get_projunits.restype = POINTER(struct_Key_Value)

# include/grass/defs/gis.h: 371
if _libs["grass_gis.8.5"].has("G_get_projinfo", "cdecl"):
    G_get_projinfo = _libs["grass_gis.8.5"].get("G_get_projinfo", "cdecl")
    G_get_projinfo.argtypes = []
    G_get_projinfo.restype = POINTER(struct_Key_Value)

# include/grass/defs/gis.h: 372
if _libs["grass_gis.8.5"].has("G_get_projepsg", "cdecl"):
    G_get_projepsg = _libs["grass_gis.8.5"].get("G_get_projepsg", "cdecl")
    G_get_projepsg.argtypes = []
    G_get_projepsg.restype = POINTER(struct_Key_Value)

# include/grass/defs/gis.h: 373
if _libs["grass_gis.8.5"].has("G_get_projwkt", "cdecl"):
    G_get_projwkt = _libs["grass_gis.8.5"].get("G_get_projwkt", "cdecl")
    G_get_projwkt.argtypes = []
    if sizeof(c_int) == sizeof(c_void_p):
        G_get_projwkt.restype = ReturnString
    else:
        G_get_projwkt.restype = String
        G_get_projwkt.errcheck = ReturnString

# include/grass/defs/gis.h: 374
if _libs["grass_gis.8.5"].has("G_get_projsrid", "cdecl"):
    G_get_projsrid = _libs["grass_gis.8.5"].get("G_get_projsrid", "cdecl")
    G_get_projsrid.argtypes = []
    if sizeof(c_int) == sizeof(c_void_p):
        G_get_projsrid.restype = ReturnString
    else:
        G_get_projsrid.restype = String
        G_get_projsrid.errcheck = ReturnString

# include/grass/defs/gis.h: 377
if _libs["grass_gis.8.5"].has("G_get_window", "cdecl"):
    G_get_window = _libs["grass_gis.8.5"].get("G_get_window", "cdecl")
    G_get_window.argtypes = [POINTER(struct_Cell_head)]
    G_get_window.restype = None

# include/grass/defs/gis.h: 378
if _libs["grass_gis.8.5"].has("G_get_default_window", "cdecl"):
    G_get_default_window = _libs["grass_gis.8.5"].get("G_get_default_window", "cdecl")
    G_get_default_window.argtypes = [POINTER(struct_Cell_head)]
    G_get_default_window.restype = None

# include/grass/defs/gis.h: 379
if _libs["grass_gis.8.5"].has("G_get_element_window", "cdecl"):
    G_get_element_window = _libs["grass_gis.8.5"].get("G_get_element_window", "cdecl")
    G_get_element_window.argtypes = [POINTER(struct_Cell_head), String, String, String]
    G_get_element_window.restype = None

# include/grass/defs/gis.h: 383
if _libs["grass_gis.8.5"].has("G_getl", "cdecl"):
    G_getl = _libs["grass_gis.8.5"].get("G_getl", "cdecl")
    G_getl.argtypes = [String, c_int, POINTER(FILE)]
    G_getl.restype = c_int

# include/grass/defs/gis.h: 384
if _libs["grass_gis.8.5"].has("G_getl2", "cdecl"):
    G_getl2 = _libs["grass_gis.8.5"].get("G_getl2", "cdecl")
    G_getl2.argtypes = [String, c_int, POINTER(FILE)]
    G_getl2.restype = c_int

# include/grass/defs/gis.h: 387
if _libs["grass_gis.8.5"].has("G_gisbase", "cdecl"):
    G_gisbase = _libs["grass_gis.8.5"].get("G_gisbase", "cdecl")
    G_gisbase.argtypes = []
    G_gisbase.restype = c_char_p

# include/grass/defs/gis.h: 390
if _libs["grass_gis.8.5"].has("G_gisdbase", "cdecl"):
    G_gisdbase = _libs["grass_gis.8.5"].get("G_gisdbase", "cdecl")
    G_gisdbase.argtypes = []
    G_gisdbase.restype = c_char_p

# include/grass/defs/gis.h: 393
if _libs["grass_gis.8.5"].has("G__gisinit", "cdecl"):
    G__gisinit = _libs["grass_gis.8.5"].get("G__gisinit", "cdecl")
    G__gisinit.argtypes = [String, String]
    G__gisinit.restype = None

# include/grass/defs/gis.h: 394
if _libs["grass_gis.8.5"].has("G__no_gisinit", "cdecl"):
    G__no_gisinit = _libs["grass_gis.8.5"].get("G__no_gisinit", "cdecl")
    G__no_gisinit.argtypes = [String]
    G__no_gisinit.restype = None

# include/grass/defs/gis.h: 395
if _libs["grass_gis.8.5"].has("G_init_all", "cdecl"):
    G_init_all = _libs["grass_gis.8.5"].get("G_init_all", "cdecl")
    G_init_all.argtypes = []
    G_init_all.restype = None

# include/grass/defs/gis.h: 398
if _libs["grass_gis.8.5"].has("G_add_error_handler", "cdecl"):
    G_add_error_handler = _libs["grass_gis.8.5"].get("G_add_error_handler", "cdecl")
    G_add_error_handler.argtypes = [
        CFUNCTYPE(UNCHECKED(None), POINTER(None)),
        POINTER(None),
    ]
    G_add_error_handler.restype = None

# include/grass/defs/gis.h: 399
if _libs["grass_gis.8.5"].has("G_remove_error_handler", "cdecl"):
    G_remove_error_handler = _libs["grass_gis.8.5"].get(
        "G_remove_error_handler", "cdecl"
    )
    G_remove_error_handler.argtypes = [
        CFUNCTYPE(UNCHECKED(None), POINTER(None)),
        POINTER(None),
    ]
    G_remove_error_handler.restype = None

# include/grass/defs/gis.h: 402
if _libs["grass_gis.8.5"].has("G_home", "cdecl"):
    G_home = _libs["grass_gis.8.5"].get("G_home", "cdecl")
    G_home.argtypes = []
    G_home.restype = c_char_p

# include/grass/defs/gis.h: 403
if _libs["grass_gis.8.5"].has("G_config_path", "cdecl"):
    G_config_path = _libs["grass_gis.8.5"].get("G_config_path", "cdecl")
    G_config_path.argtypes = []
    G_config_path.restype = c_char_p

# include/grass/defs/gis.h: 406
if _libs["grass_gis.8.5"].has("G_init_ilist", "cdecl"):
    G_init_ilist = _libs["grass_gis.8.5"].get("G_init_ilist", "cdecl")
    G_init_ilist.argtypes = [POINTER(struct_ilist)]
    G_init_ilist.restype = None

# include/grass/defs/gis.h: 407
if _libs["grass_gis.8.5"].has("G_free_ilist", "cdecl"):
    G_free_ilist = _libs["grass_gis.8.5"].get("G_free_ilist", "cdecl")
    G_free_ilist.argtypes = [POINTER(struct_ilist)]
    G_free_ilist.restype = None

# include/grass/defs/gis.h: 408
if _libs["grass_gis.8.5"].has("G_new_ilist", "cdecl"):
    G_new_ilist = _libs["grass_gis.8.5"].get("G_new_ilist", "cdecl")
    G_new_ilist.argtypes = []
    G_new_ilist.restype = POINTER(struct_ilist)
